--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sanitize-html": "^2.5.1",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "uuid": "^8.3.2"
