--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "isomorphic-dompurify": "^0.15.0",
     "next": "^11.0.1",
+    "nextjs-progressbar": "^0.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.32.8"
+    "react-js-pagination": "^3.0.2",
+    "sass": "^1.32.8",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.13",
+    "@types/react-js-pagination": "^3.0.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.3.5"
