--- a/api/.production.env
+++ b/api/.production.env
@@ -1,6 +1,6 @@
 PORT=5000
 POSTGRES_HOST=localhost
-POSTGRES_USER=postgres
+POSTGRES_USER=u.gurov
 POSTGRES_DB=ahilla-test
 POSTGRES_PASSWORD=SSgg1986
 POSTGRES_PORT=5432
