--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_DOMAIN_URL="http://ahilla.676767ap.ru"
+NEXT_PUBLIC_DOMAIN_URL="http://localhost:5000"
+NEXT_PUBLIC_FETCH_URL="http://ahilla.676767ap.ru"
