--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "isomorphic-dompurify": "^0.15.0",
     "next": "^11.0.1",
     "nextjs-progressbar": "^0.0.11",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.2",
+    "react-quilljs": "^1.2.17",
     "sass": "^1.32.8",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
+    "@types/quill": "^2.0.9",
     "@types/react": "^17.0.13",
     "@types/react-js-pagination": "^3.0.4",
     "eslint": "7.32.0",
