--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cookie": "^0.4.1",
+    "cyrillic-to-translit-js": "^3.1.0",
     "isomorphic-dompurify": "^0.15.0",
     "next": "^11.0.1",
     "nextjs-progressbar": "^0.0.11",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.2",
     "react-quilljs": "^1.2.17",
+    "react-select": "^5.1.0",
     "sass": "^1.32.8",
     "sharp": "^0.29.1"
   },
