добавляет список публикаций с инструментами админа

--- a/api/.production.env
+++ b/api/.production.env
@@ -5,3 +5,4 @@ POSTGRES_DB=ahilla-test
 POSTGRES_PASSWORD=SSgg1986
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_ahilla_forever
+PART_FILE_PATH="http://ahilla.676767ap.ru/wp-content/uploads/"
