--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-js-pagination": "^3.0.2",
     "react-quilljs": "^1.2.17",
     "react-select": "^5.1.0",
+    "react-share": "^4.4.0",
     "sass": "^1.32.8",
     "sharp": "^0.29.1"
   },
