--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-decoupled-document": "^31.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.3",
     "cookie": "^0.4.1",
     "cyrillic-to-translit-js": "^3.1.0",
     "isomorphic-dompurify": "^0.15.0",
     "next": "^11.0.1",
     "nextjs-progressbar": "^0.0.11",
-    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.2",
-    "react-quilljs": "^1.2.17",
     "react-select": "^5.1.0",
     "react-share": "^4.4.0",
     "sass": "^1.32.8",
