--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-decoupled-document": "^31.0.0",
+    "@ckeditor/ckeditor5-html-embed": "^31.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
     "cookie": "^0.4.1",
     "cyrillic-to-translit-js": "^3.1.0",
@@ -25,6 +26,7 @@
     "sharp": "^0.29.1"
   },
   "devDependencies": {
+    "@types/ckeditor__ckeditor5-build-decoupled-document": "^29.1.1",
     "@types/cookie": "^0.4.1",
     "@types/quill": "^2.0.9",
     "@types/react": "^17.0.13",
