--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,8 @@
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
     "express-session": "^1.17.2",
+    "meilisearch": "0.22.3",
+    "nestjs-meilisearch": "2.1.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
