--- a/api/.production.env
+++ b/api/.production.env
@@ -6,3 +6,5 @@ POSTGRES_PASSWORD=SSgg1986
 POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_ahilla_forever
 PART_FILE_PATH="http://ahilla.676767ap.ru/wp-content/uploads/"
+MEILISEARCH_HOST="http://127.0.0.1:7700"
+MEILISEARCH_PRIVATE_KEY=masterAhillaKey
