добавляет команды для старта проекта из pm2

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
     "start": "cross-env NODE_ENV=production nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=production node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main --log",
+    "start:prod_pm2": "NODE_ENV=production pm2 start dist/main.js --name api",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
