--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-build-decoupled-document": "^31.0.0",
     "@ckeditor/ckeditor5-html-embed": "^31.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
+    "@tinymce/tinymce-react": "^3.13.0",
     "cookie": "^0.4.1",
     "cyrillic-to-translit-js": "^3.1.0",
     "isomorphic-dompurify": "^0.15.0",
